[gd_scene load_steps=2 format=3 uid="uid://b5n8m3vx7qr4k"]

[ext_resource type="Script" path="res://ui/dialogue/choice_button.gd" id="1_choice_button"]

[node name="ChoiceButton" type="Button"]
custom_minimum_size = Vector2(200, 32)
focus_mode = 2
flat = true
script = ExtResource("1_choice_button")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 200.0
offset_bottom = 32.0
mouse_filter = 2
color = Color(0.1, 0.1, 0.15, 0.7)

[node name="HoverHighlight" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 198.0
offset_bottom = 30.0
mouse_filter = 2
color = Color(0.3, 0.5, 0.8, 0)

[node name="ChoiceLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -6.0
text = "Choice option text"
vertical_alignment = 1
autowrap_mode = 3
